--- a/ClientApp/src/components/HeroSection.css
+++ b/ClientApp/src/components/HeroSection.css
@@ -25,6 +25,7 @@ video {
   margin-top: -100px;
 }
 
+
 .hero-container > p {
   margin-top: 8px;
   color: #fff;
@@ -32,6 +33,38 @@ video {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
 }
+
+/*.hero-container > .search-box > input {
+        height: 100%;
+        width: 100%;
+        border: none;
+        outline: none;
+        background: #fff;
+        font-size: 18px;
+        border-radius: 50px;
+}*/
+input[type=text] {
+    position: relative;
+    padding: 15px 40px 15px 20px;
+    width: 20px;
+    color: #525252;
+    font-size: 16px;
+    font-weight: 100;
+    letter-spacing: 2px;
+    border: none;
+    border-radius: 50px;
+    background: linear-gradient(to right, #FFFFFF 0%,#464747 #F9F9F9 100%);
+    transition: width 0.4s ease;
+    outline: none;
+
+}
+input[type=text]:focus {
+    width: 300px;
+}
+
+
+
+
 
 .hero-btns {
   margin-top: 32px;
@@ -70,4 +103,19 @@ video {
   .btn {
     width: 100%;
   }
+/*
+  .search-box{
+      height:300px;
+      width:50050px;
+  }*/
+/*  .search-box input{
+      height: 100%;
+      width: 100%;
+      border: none;
+      outline: none;
+      background: #ff0000;
+      font-size: 18px;
+      border-radius: 50px;
+      padding: 0 60px 0 20px;
+  }*/
 }
