--- a/ClientApp/src/components/Cards.css
+++ b/ClientApp/src/components/Cards.css
@@ -16,6 +16,16 @@ h1 {
   margin: 0 auto;
 }
 
+.cards__recipecontainer {
+    display: flex;
+    
+    flex-flow: row;
+    max-width: 1000px;
+    width: 100%;
+
+
+}
+
 .cards__wrapper {
   position: relative;
   margin: 50px 0 45px;
