--- a/ClientApp/src/components/RecipeInfo.css
+++ b/ClientApp/src/components/RecipeInfo.css
@@ -1,61 +1,105 @@
-﻿.recipe {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+﻿@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Montserrat:wght@300;400;600&display=swap");
+
+
+
+
+
+
+
+.head {
+    position: relative;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed;
 }
 
-.recipe-title {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-top: 2rem;
+.summary {
+    position: relative;
+    text-align: justify;
+    margin-bottom: 20px;
+    
 }
 
-.recipe-image {
-    width: 100%;
+
+
+.dish {
+    padding: 1rem 1rem;
     max-width: 600px;
-    margin: 2rem 0;
+    margin: 0 auto;
+    text-align : center;
 }
 
-.recipe-info {
+    .dish header h2 {
+        font-weight: 300;
+        font-size: 1.6rem;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        font-family: "Montserrat", sans-serif;
+    }
 
-    justify-content: center;
-    width: 35%;
+    .dish header p {
+        font-weight: 300;
+        font-size: 1.3rem;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        font-family: "Montserrat", sans-serif;
+    }
+
+    .dish header span {
+        font-weight: 600;
+    }
+
+    .dish img {
+        width: 100%;
+        max-width: 700px;
+    }
+
+.dishIngredients h3 {
+    letter-spacing: 1px;
+    font-weight: 300;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    font-family: "Montserrat", sans-serif;
 }
 
-.recipe-info-item {
-    display: flex;
-    flex-direction: column;
-    margin: 2rem;
-    text-align: center;
+    .dishIngredients h3 span {
+        font-weight: 600;
+    }
+
+.dishIngredients ul {
+    font-size: 1rem;
+    line-height: 2;
+    text-align: left;
+    list-style-type: circle;
+    max-width: 510px;
+    margin: 1rem auto;
+    padding-left: 2rem;
+
 }
 
-    .recipe-info-item h2 {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 1rem;
-    }
 
-    .recipe-info-item ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-    }
 
-        .recipe-info-item ul li {
-            margin-bottom: 0.5rem;
-        }
+.preparation p {
+    text-align:center;
 
-    .recipe-info-item ol {
-        list-style-type: decimal;
-        padding-left: 1.5rem;
-        margin: 0;
-    }
+}
 
-        .recipe-info-item ol li {
-            margin-bottom: 0.5rem;
-        }
+.preparation a {
+    padding: 0.5rem;
+    margin: 1rem 0.2rem;
+    display: inline-block;
+}
 
-    .recipe-info-item p {
-        font-size: 1.2rem;
-        margin: 0;
-    }
+.preparation h3 {
+    letter-spacing: 1px;
+    font-weight: 300;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    font-family: "Montserrat", sans-serif;
+}
+.h3font {
+    letter-spacing: 1px;
+    font-weight: 300;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    font-family: "Montserrat", sans-serif;
+}
