--- a/ClientApp/src/components/Cards.css
+++ b/ClientApp/src/components/Cards.css
@@ -2,6 +2,13 @@
   padding: 4rem;
   background: #fff;
 }
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 
 h1 {
   text-align: center;
@@ -18,7 +25,7 @@ h1 {
 
 .cards__recipecontainer {
     display: flex;
-    
+    max-height: 500px;
     flex-flow: row;
     max-width: 1000px;
     width: 100%;
@@ -40,6 +47,11 @@ h1 {
   flex: 1;
   margin: 0 1rem;
   border-radius: 10px;
+}
+.cards__recipe {
+
+    margin: 100px auto;
+    border-radius: 100px;
 }
 
 .cards__item__link {
