--- a/ClientApp/src/components/Button.css
+++ b/ClientApp/src/components/Button.css
@@ -24,6 +24,14 @@
   transition: all 0.3s ease-out;
 }
 
+.btn--outline2 {
+    background-color: deepskyblue;
+    color: #fff;
+    padding: 8px 20px;
+    border: 1px solid var(--primary);
+    transition: all 0.3s ease-out;
+}
+
 .btn--medium {
   padding: 8px 20px;
   font-size: 18px;
