--- a/ClientApp/src/components/Cards.css
+++ b/ClientApp/src/components/Cards.css
@@ -16,8 +16,21 @@
 }
 
 h1 {
+    
     text-align: center;
     font-family: "Montserrat", sans-serif;
+}
+.header2 {
+    align-content: center;
+    background-color: deepskyblue;
+    max-width: 700px;
+    color: #fff;
+    padding: 8px 20px;
+    border: 1px solid var(--primary);
+    border-radius: 400px;
+    text-align: center;
+    font-family: 'Lucida Handwriting';
+    margin: auto;
 }
 
 .cards__container {
