Removed styling that changed background and font for whole site

--- a/ClientApp/src/components/SignIn.css
+++ b/ClientApp/src/components/SignIn.css
@@ -7,16 +7,16 @@
     align-content:center;
 }
 
-html {
+/* html {
     font-family: 'Nunito', sans-serif;
     font-size: 22px;
     color: #fff;
-}
+} */
 
-body {
+/* body {
     min-height: 100vh;
     background-color: dodgerblue;
-}
+} */
 
 .App {
     display: flex;
