--- a/ClientApp/src/components/HeroSection.css
+++ b/ClientApp/src/components/HeroSection.css
@@ -43,7 +43,7 @@ video {
         font-size: 18px;
         border-radius: 50px;
 }*/
-input[type=text] {
+/* input[type=text] {
     position: relative;
     padding: 15px 40px 15px 20px;
     width: 20px;
@@ -60,7 +60,7 @@ input[type=text] {
 }
 input[type=text]:focus {
     width: 300px;
-}
+} */
 
 
 .hero-btns {
